--- a/staRt/www/css/style.css
+++ b/staRt/www/css/style.css
@@ -13,6 +13,23 @@
   text-align: center;
   display: -webkit-flex;
   -webkit-flex: 1;
+  -webkit-flex-direction: column;
+}
+
+#lpc-container {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+}
+
+#lpc-canvas {
+  width: 300px;
+  height: 200px;
+  margin: auto;
+}
+
+#text-content {
+  display: -webkit-flex;
+  -webkit-flex: 1;
 }
 
 .navTabs {
