--- a/audio-plugin/src/ios/AudioPlugin/AudioPluginTester/Base.lproj/Main.storyboard
+++ b/audio-plugin/src/ios/AudioPlugin/AudioPluginTester/Base.lproj/Main.storyboard
@@ -16,7 +16,29 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="35M-MH-vDg">
+                                <rect key="frame" x="246" y="285" width="108" height="30"/>
+                                <state key="normal" title="Start Recording"/>
+                                <connections>
+                                    <action selector="startRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aE3-Xy-omi"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ldc-eC-Wp1">
+                                <rect key="frame" x="247" y="350" width="106" height="30"/>
+                                <state key="normal" title="Stop Recording"/>
+                                <connections>
+                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fjt-8H-obD"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="35M-MH-vDg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fy7-eQ-FhV"/>
+                            <constraint firstItem="ldc-eC-Wp1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lRI-rS-3fN"/>
+                            <constraint firstItem="35M-MH-vDg" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="mrd-ux-ldS"/>
+                            <constraint firstItem="ldc-eC-Wp1" firstAttribute="top" secondItem="35M-MH-vDg" secondAttribute="bottom" constant="35" id="wjB-y6-ITp"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
