--- a/audio-plugin/src/ios/AudioPlugin/AudioPluginTester/Base.lproj/Main.storyboard
+++ b/audio-plugin/src/ios/AudioPlugin/AudioPluginTester/Base.lproj/Main.storyboard
@@ -31,6 +31,14 @@
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fjt-8H-obD"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zcG-TC-CSd">
+                                <rect key="frame" x="247" y="416" width="106" height="30"/>
+                                <state key="normal" title="List Recordings"/>
+                                <connections>
+                                    <action selector="listRecordings:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nio-Tu-RbY"/>
+                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qEU-CP-Pid"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
