Fill in all state templates, modules, and controllers; fix nav UI bug

--- a/staRt/www/css/ionic.app.css
+++ b/staRt/www/css/ionic.app.css
@@ -9788,3 +9788,6 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+#nav-and-content-container {
+  display: flex; }
