--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1,86 +1,76 @@
 #app-container {
   display: -webkit-flex;
-  -webkit-flex-direction: row;
-}
+  -webkit-flex-direction: row; }
 
-#nav-and-content-container
-{
+#nav-and-content-container {
   display: flex;
-  flex-flow: row nowrap;
-}
+  flex-flow: row nowrap; }
 
 #nav-container {
   display: -webkit-flex;
   -webkit-flex-direction: column;
   width: 10vw;
-  z-index: 999;
-}
+  z-index: 999; }
 
 #content-container {
   text-align: center;
   display: -webkit-flex;
   -webkit-flex: 1;
   -webkit-flex-direction: column;
-  width: 90vw;
-
-}
+  width: 90vw; }
 
 #lpc-container {
   display: -webkit-flex;
-  -webkit-flex: 1;
-}
+  -webkit-flex: 1; }
 
 #lpc-canvas {
   width: 300px;
   height: 200px;
-  margin: auto;
-}
+  margin: auto; }
 
 .text-and-lpc {
   display: -webkit-flex;
   -webkit-flex: 1;
   font-size: 1rem;
-  margin-top: 4rem;
-}
+  margin-top: 4rem; }
 
-.pane
-{
-  flex-flow: column;
-}
+.pane {
+  flex-flow: column; }
 
-.nav-container
-{
-  z-index: 99;
-}
+.nav-container {
+  z-index: 99; }
 
 .navTabs {
   background-color: lightgray;
   height: 100vh;
   display: -webkit-flex;
   -webkit-flex: 1;
-  -webkit-flex-direction: column;
-}
+  -webkit-flex-direction: column; }
 
 .navTab {
   background-color: white;
   margin: 5px;
   text-align: center;
   display: -webkit-flex;
-  -webkit-flex: 1;
-}
+  -webkit-flex: 1; }
 
 .navTabText {
-  margin: auto;
-}
+  margin: auto; }
 
 .bigtext {
-  font-size: 55pt;
-}
+  font-size: 55pt; }
 
 .testbutton {
-  background-color: lightblue;
-}
+  background-color: lightblue; }
 
 .testbutton:active {
-  background-color: darkblue;
-}
+  background-color: darkblue; }
+
+.profiles {
+  flex-flow: row nowrap; }
+
+.profiles__list {
+  flex-grow: 1; }
+
+.profiles__info {
+  flex-grow: 1; }
