--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -1,8 +1,3 @@
-// .profiles-wrapper
-// {
-
-// }
-
 .profiles
 {
 	flex-flow: row nowrap;
@@ -10,10 +5,10 @@
 
 .profiles__list
 {
-	flex-grow: 1;
+	flex: 1 0 0%;
 }
 
 .profiles__info
 {
-	flex-grow: 1;
+	flex: 1 0 0%;
 }
