--- a/staRt/www/app_styles.scss
+++ b/staRt/www/app_styles.scss
@@ -1,9 +1,11 @@
 // Common Styles
 @import 'common-styles/variables';
 @import 'common-styles/typography';
-
+@import 'common-styles/elements';
 
 // State-specific styles
 @import 'states/root/root_styles';
 @import 'states/root/profiles/profiles_styles';
 
+// Directive styles
+@import 'common-components/lpc-directive/lpc-directive_styles';
