--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -13,6 +13,34 @@
   font-weight: bold;
   font-style: normal; }
 
+.range input {
+  height: 25px;
+  border-radius: 25px;
+  background-color: red;
+  box-shadow: inset 2px 2px 2px rgba(77, 77, 77, 0.25);
+  width: 560px;
+  margin: 15px;
+  border: 0px solid orange;
+  -webkit-appearance: none; }
+
+.range input {
+  height: 25px;
+  border-radius: 25px;
+  background-color: #C5F3FF;
+  box-shadow: inset 2px 2px 2px rgba(77, 77, 77, 0.25);
+  width: 560px;
+  margin: 15px;
+  border: 0px solid orange;
+  -webkit-appearance: none; }
+
+.range input::-ms-track {
+  width: 100%;
+  cursor: pointer;
+  /* Hides the slider so custom styles can be added */
+  background: transparent;
+  border-color: transparent;
+  color: transparent; }
+
 #app-container {
   display: -webkit-flex;
   -webkit-flex-direction: row;
@@ -34,15 +62,6 @@
   -webkit-flex: 1;
   -webkit-flex-direction: column;
   width: 90vw; }
-
-#lpc-container {
-  display: -webkit-flex;
-  -webkit-flex: 1; }
-
-#lpc-canvas {
-  width: 300px;
-  height: 200px;
-  margin: auto; }
 
 canvas {
   background-color: #000000; }
@@ -96,3 +115,15 @@ canvas {
 
 .profiles__info {
   flex: 1 0 0%; }
+
+lpc-directive {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  width: 300px;
+  height: 200px;
+  margin: auto; }
+
+#lpc-canvas {
+  width: 300px;
+  height: 200px;
+  margin: auto; }
