--- a/staRt/www/app_styles.scss
+++ b/staRt/www/app_styles.scss
@@ -1,7 +1,7 @@
 // Common Styles
 @import 'common-styles/variables';
 @import 'common-styles/typography';
-@import 'common-styles/elements';
+@import 'common-styles/ui';
 
 // State-specific styles
 @import 'states/root/root_styles';
