--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -23,7 +23,11 @@
   border: 0px solid orange;
   -webkit-appearance: none; }
 
-.range input {
+.range {
+  padding: 1em; }
+
+.range input[type=range] {
+  -webkit-appearance: none;
   height: 25px;
   border-radius: 25px;
   background-color: #C5F3FF;
@@ -31,15 +35,21 @@
   width: 560px;
   margin: 15px;
   border: 0px solid orange;
-  -webkit-appearance: none; }
+  overflow: visible; }
 
-.range input::-ms-track {
-  width: 100%;
-  cursor: pointer;
-  /* Hides the slider so custom styles can be added */
-  background: transparent;
-  border-color: transparent;
-  color: transparent; }
+.range input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  margin-top: 0px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: #53C8E9;
+  margin-right: 50px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  border: 0px solid green; }
+
+.item {
+  border-color: transparent; }
 
 #app-container {
   display: -webkit-flex;
