Clean up 'Resources' a bit more

--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -2,6 +2,7 @@
   display: -webkit-flex;
   -webkit-flex-direction: row;
   font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
+  line-height: 1.7;
 }
 
 #nav-and-content-container
