--- a/staRt/www/app_styles.scss
+++ b/staRt/www/app_styles.scss
@@ -3,9 +3,10 @@
 @import 'common-styles/typography';
 @import 'common-styles/ui';
 
-// State-specific styles
+// State styles
 @import 'states/root/root_styles';
 @import 'states/root/profiles/profiles_styles';
+@import 'states/root/resources/resources_styles';
 
 // Directive styles
 @import 'common-components/lpc-directive/lpc-directive_styles';
