--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -13,16 +13,6 @@
   font-weight: bold;
   font-style: normal; }
 
-.range input {
-  height: 25px;
-  border-radius: 25px;
-  background-color: red;
-  box-shadow: inset 2px 2px 2px rgba(77, 77, 77, 0.25);
-  width: 560px;
-  margin: 15px;
-  border: 0px solid orange;
-  -webkit-appearance: none; }
-
 .range {
   padding: 1em; }
 
@@ -54,7 +44,8 @@
 #app-container {
   display: -webkit-flex;
   -webkit-flex-direction: row;
-  font-family: 'Quicksand', 'Helvetica Neue', sans-serif; }
+  font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
+  line-height: 1.7; }
 
 #nav-and-content-container {
   display: flex;
@@ -126,11 +117,26 @@ canvas {
 .profiles__info {
   flex: 1 0 0%; }
 
+.range-container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center; }
+
+.range-label {
+  font-weight: bold;
+  width: 40px;
+  white-space: pre-line;
+  padding: 1em 0; }
+  .range-label:first-child {
+    padding-left: 0; }
+
+.resources strong {
+  display: block;
+  color: #53c8e9; }
+
 lpc-directive {
   display: -webkit-flex;
   -webkit-flex: 1;
-  width: 300px;
-  height: 200px;
   margin: auto; }
 
 #lpc-canvas {
