--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -3,6 +3,7 @@
   -webkit-flex-direction: row;
   font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
   line-height: 1.7;
+  color: $grey;
 }
 
 .bar-header
@@ -85,7 +86,16 @@ canvas {
   -webkit-flex: 1;
   border-radius: 4px;
   box-shadow: 1px 0px 2px #d3d3d3;
+  transition: width 0.5s ease-in-out;
 
+  &.active
+  {
+    color: #53C8E9;
+    background-color: #F0F9FC;
+    box-shadow: 2px 1px 2px #d1d1d1;
+    z-index: 25;
+    width: 108px;
+  }
 }
 
 .navTabText {
