--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -9,7 +9,7 @@
 .bar-header
 {
   background-color: $light-blue;
-  height: 100px;
+  height: 110px;
   display: flex;
   align-items: center;
   padding-left: 120px;
@@ -87,6 +87,11 @@ canvas {
   border-radius: 4px;
   box-shadow: 1px 0px 2px #d3d3d3;
   transition: width 0.5s ease-in-out;
+  width: 100px;
+  padding-top: 10%;
+  padding-bottom: 5%;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
 
   &.active
   {
