See #16 -- LPC can be resized now. Of course, I don't really know how to style it so that is will actually resize, but it can, in principle, be resized

--- a/staRt/www/css/style.css
+++ b/staRt/www/css/style.css
@@ -25,15 +25,9 @@
 
 }
 
-#lpc-container {
+.lpc-container {
   display: -webkit-flex;
   -webkit-flex: 1;
-}
-
-#lpc-canvas {
-  width: 300px;
-  height: 200px;
-  margin: auto;
 }
 
 .text-and-lpc {
