--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -5,8 +5,16 @@ lpc-directive
   margin: auto;
 }
 
-#lpc-canvas {
-  width: 300px;
-  height: 200px;
-  margin: auto;
+.lpc-container
+{
+	margin: auto;
+	width: 75%;
+	height: 75%;
+	margin-top: 200px;
+}
+
+#lpc-canvas
+{
+	width: 100%;
+	height: 100%;
 }
