--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -168,7 +168,12 @@ lpc-directive {
   -webkit-flex: 1;
   margin: auto; }
 
+.lpc-container {
+  margin: auto;
+  width: 75%;
+  height: 75%;
+  margin-top: 200px; }
+
 #lpc-canvas {
-  width: 300px;
-  height: 200px;
-  margin: auto; }
+  width: 100%;
+  height: 100%; }
