--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -176,17 +176,25 @@ lpc-directive {
   height: 200px;
   margin: auto; }
 
+.lpc-container {
+  position: absolute;
+  bottom: 0;
+  width: 800px; }
+
 .lpc-container .range {
-  height: 300px; }
+  height: 400px;
+  background-color: transparent; }
   .lpc-container .range input {
     background: transparent; }
 
 .lpc-container input[type='range'] {
   background-color: transparent;
   box-shadow: none;
-  overflow: visible; }
+  overflow: visible;
+  position: absolute;
+  bottom: 72px; }
   .lpc-container input[type='range']::-webkit-slider-thumb {
-    height: 300px;
+    height: 400px;
     width: 50px;
     display: block;
     background: url("http://chalkidiki-now.com/static/images/starfish.gif") no-repeat;
