--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -201,7 +201,25 @@ lpc-directive {
     background-size: 50px 50px;
     background-position: center bottom;
     box-shadow: none;
-    border-right: 1px solid red;
+    border-right: 2px solid white;
     border-radius: 0;
     position: relative;
     bottom: 100px; }
+
+.lpc-container output {
+  position: absolute;
+  top: 20px;
+  display: block;
+  width: 50px;
+  height: 24px;
+  border: 1px solid #e2e2e2;
+  background-color: #fff;
+  border-radius: 3px;
+  color: #777;
+  font-size: .8em;
+  line-height: 24px;
+  text-align: center; }
+
+.lpc-container input[type=range]:active + output {
+  display: block;
+  transform: translateX(-50%); }
