--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -39,6 +39,8 @@ lpc-directive
 	overflow: visible;
 	position: absolute;
 	bottom: 72px;
+	left: 0;
+	width: 100%;
 
 	&::-webkit-slider-thumb
 	{
@@ -57,21 +59,22 @@ lpc-directive
 }
 
 .lpc-container output {
-  position: absolute;
-  top: 20px;
-  display: block;
-  width: 50px;
-  height: 24px;
-  border: 1px solid #e2e2e2;
-  background-color: #fff;
-  border-radius: 3px;
-  color: #777;
-  font-size: .8em;
-  line-height: 24px;
-  text-align: center;
+	position: absolute;
+	top: 20px;
+	display: block;
+	width: 50px;
+	height: 24px;
+	border: 1px solid #e2e2e2;
+	background-color: #fff;
+	border-radius: 3px;
+	color: #777;
+	font-size: .8em;
+	line-height: 24px;
+	text-align: center;
+
 }
 
-.lpc-container input[type=range]:active + output {
-  display: block;
-  transform: translateX(-50%);
+.lpc-container input[type='range']:active + output {
+	display: block;
+	transform: translateX(-50%);
 }
