--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -197,13 +197,11 @@ lpc-directive {
   width: 100%; }
   .lpc-container input[type='range']::-webkit-slider-thumb {
     height: 400px;
-    width: 50px;
     display: block;
     background: url("http://chalkidiki-now.com/static/images/starfish.gif") no-repeat;
     background-size: 50px 50px;
-    background-position: center bottom;
+    background-position: right bottom;
     box-shadow: none;
-    border-right: 2px solid white;
     border-radius: 0;
     position: relative;
     bottom: 100px; }
@@ -217,10 +215,18 @@ lpc-directive {
   border: 1px solid #e2e2e2;
   background-color: #fff;
   border-radius: 3px;
-  color: #777;
+  color: #4d4d4d;
   font-size: .8em;
   line-height: 24px;
   text-align: center; }
+  .lpc-container output:after {
+    content: '';
+    height: 400px;
+    width: 2px;
+    background-color: white;
+    display: block;
+    margin-left: 50%;
+    margin-right: 50%; }
 
 .lpc-container input[type='range']:active + output {
   display: block;
