--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -45,14 +45,11 @@ lpc-directive
 	&::-webkit-slider-thumb
 	{
 		height: 400px;
-		// width: 2px;
-		// padding: 0 25px;
 		display: block;
 		background: url('http://chalkidiki-now.com/static/images/starfish.gif') no-repeat;
 		background-size: 50px 50px;
-		background-position: right bottom;
+		background-position: center bottom;
 		box-shadow: none;
-		// border-right: 2px solid white;
 		border-radius: 0;
 		position: relative;
 		bottom: 100px;
@@ -76,12 +73,15 @@ lpc-directive
 	&:after
 	{
 		content: '';
-		height: 400px;
+		height: 500px;
 		width: 2px;
 		background-color: white;
 		display: block;
 		margin-left: 50%;
 		margin-right: 50%;
+		position: absolute;
+		top: -30px;
+		z-index: -1;
 	}
 
 }
