--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -9,22 +9,29 @@ lpc-directive
 }
 
 #lpc-canvas {
-	width: 300px;
-	height: 200px;
+	width: 100%;
+	height: 100%;
 	margin: auto;
+	z-index: 10;
 }
 
 .lpc-container
 {
-	position: absolute;
-	bottom: 0;
+	position: relative;
 	width: 800px;
+	height: 400px;
 }
 
 .lpc-container .range
 {
 	height: 400px;
 	background-color: transparent;
+	position: absolute;
+	top: 0;
+	z-index: 9999999999;
+	left: 0;
+	height: 100%;
+	width: 100%;
 
 	input
 	{
