--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -172,18 +172,25 @@ lpc-directive {
   flex-flow: column; }
 
 #lpc-canvas {
-  width: 300px;
-  height: 200px;
-  margin: auto; }
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  z-index: 10; }
 
 .lpc-container {
-  position: absolute;
-  bottom: 0;
-  width: 800px; }
+  position: relative;
+  width: 800px;
+  height: 400px; }
 
 .lpc-container .range {
   height: 400px;
-  background-color: transparent; }
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  z-index: 9999999999;
+  left: 0;
+  height: 100%;
+  width: 100%; }
   .lpc-container .range input {
     background: transparent; }
 
