--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -1,7 +1,11 @@
+*
+{
+    font-family: 'Quicksand', 'Helvetica Neue', sans-serif !important;
+}
+
 #app-container {
   display: -webkit-flex;
   -webkit-flex-direction: row;
-  font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
   line-height: 1.7;
   color: $grey;
 }
@@ -44,7 +48,9 @@
   display: -webkit-flex;
   -webkit-flex: 1;
   -webkit-flex-direction: column;
+  height: 85vh;
   width: 90vw;
+  margin-top: 110px;
 
 }
 
@@ -56,7 +62,6 @@ canvas {
   display: -webkit-flex;
   -webkit-flex: 1;
   font-size: 1rem;
-  padding-top: 8rem;
 }
 
 .pane
