--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -1,6 +1,6 @@
 *
 {
-    font-family: 'Quicksand', 'Helvetica Neue', sans-serif !important;
+  font-family: 'Quicksand', 'Helvetica Neue', sans-serif !important;
 }
 
 #app-container {
@@ -62,6 +62,12 @@ canvas {
   display: -webkit-flex;
   -webkit-flex: 1;
   font-size: 1rem;
+}
+
+.text-and-lpc__text
+{
+  font-size: 20pt;
+  font-weight: bold;
 }
 
 .pane
