--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -31,17 +31,39 @@ lpc-directive
 .slider-and-canvas
 {
 	display: inline-block;
-    width: 90%;
-    position: absolute;
-    left: 0;
+	width: 88%;
+	position: absolute;
+	left: 0;
 }
 
 .lpc-buttons
 {
 	display: inline-block;
-    position: absolute;
-    width: 10%;
-    right: 0;
+	position: absolute;
+	width: 12%;
+	right: 0;
+}
+
+.reset-button
+{
+	height: 65px;
+	background-color: #FFECCB;
+	color: #e79b4c;
+	float: right;
+	border: 0px solid red;
+	position: relative; 
+	height: 65px;
+	width: 80px;
+	margin: 0px;
+	padding: 5px; 
+	font-size: 0.90em;
+	font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
+	font-weight: 800;
+	text-align: center;
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+	z-index: 99;
+	border: 0;
+	display: block;
 }
 
 .lpc-range
@@ -123,7 +145,7 @@ lpc-directive
 	display: block;
 	position: absolute;
 	left: -1px;
-	bottom: -1px;
-	width: 100.2%;
+	bottom: 0px;
+	width: 100.3%;
 	background-color: $yellow;
 }
