--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -13,7 +13,7 @@
 .bar-header
 {
   background-color: $light-blue;
-  height: 110px;
+  height: 14vh !important;
   display: flex;
   align-items: center;
   padding-left: 120px;
