--- a/staRt/www/app_styles.scss
+++ b/staRt/www/app_styles.scss
@@ -7,6 +7,7 @@
 @import 'states/root/root_styles';
 @import 'states/root/profiles/profiles_styles';
 @import 'states/root/resources/resources_styles';
+@import 'states/root/words/words_styles';
 
 // Directive styles
 @import 'common-components/lpc-directive/lpc-directive_styles';
