Add correct star SVG to slider

--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -129,7 +129,7 @@ lpc-directive
 	{
 		height: 400px;
 		display: block;
-		background: url('http://chalkidiki-now.com/static/images/starfish.gif') no-repeat;
+		background: url('../img/star2.svg') no-repeat;
 		background-size: 50px 50px;
 		background-position: center bottom;
 		box-shadow: none;
