--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -293,7 +293,7 @@ lpc-directive {
   .lpc-container input[type='range']::-webkit-slider-thumb {
     height: 400px;
     display: block;
-    background: url("http://chalkidiki-now.com/static/images/starfish.gif") no-repeat;
+    background: url("../img/star2.svg") no-repeat;
     background-size: 50px 50px;
     background-position: center bottom;
     box-shadow: none;
